--- a/Callbacks.ipynb
+++ b/Callbacks.ipynb
@@ -411,6 +411,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
